# OPDI

./: .gitignore  Borealis-3Di-v01.Rmd  Borealis-3Di-v02.Rmd  Borealis-3Di-v03.Rmd  MANIFEST.in  PDFRescaler.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  fetch-data-daily.py  fetch-data-full.py  flight_identification_backup.py  gotcha.Rmd  new_events.ipynb  opdi.py  phase.md  pyproject.toml  readme.md  sqltest.ipynb  x-error-airspacecrossing.RDS
OurAirports/: create_oa_airports.sql
R/: coerce_meter_to_feet.R  components_3Di.R  extract_milestones_from_trajectoryset.R  extract_milestones_from_trj.R  get_firs.R  interject_airspace_crossing.R  interpolate_cross_time.R  interpolate_lin_4D.R  read_and_fix_NM_trjs.R  sf_cast_utils.R  standardise_traj.R  standardise_trj_NM.R  trj_airspace_crossing.R  trj_alt_outlier_filter.R  trj_check_level_flight.R  trj_identify_leg.R  trj_make_uid.R  x_helper_plot_trj.R  x_run_counter.R
SQL/: Transfer_osn_ec_datadump_to_partition.sql  Untitled.ipynb  create_airport_distance_reference.sql  create_airport_proximity_flight_data.sql  create_oa_airport_frequencies.sql  create_oa_regions.sql  create_oa_runways.sql  create_opdi_runway_hexagons_table.sql  create_osn_ec_datadump_w_id.sql  create_osn_flight_table.sql  create_osn_flight_table_with_id.sql  create_osn_h3_statevectors.sql  create_osn_tracks.sql  create_osn_trajectories.sql
data/: FIR-borealis_firs.rda  MST-3Di-202304-NM.parquet  README_for_RQ.txt  RES-HORI-202304.parquet  RES-VERTI-202304.parquet  bor-cps-2023-Q1Q2.csv  ingest_to_dl.ipynb
docs/: conf.py  getting_started.rst  index.rst  pipeline_overview.rst
examples/: basic_usage.py
libs/: filetools.py  geotools.py
logs/: 01_osn-statevectors-clustering.parquet  02_osn-statevectors-h3-addition-log.parquet  02_osn-tracks-etl-log.parquet  03_osn-flight_table-etl-log.parquet  03_osn-flight_table-overflights-etl-log.parquet  readparquets.ipynb
python/: Airport_coverage_data.ipynb  HexAeroPySpark.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  airports.ipynb  backup_nov23_jul24.py  create_airport_grids.py  create_airport_proximity_flight_data.py  create_table_bug (2).ipynb  create_table_bug.ipynb  data-download.ipynb  download_osn_dump.py  etl_ourairports.py  extract_OPDI.py  fetch-data-daily.py  fir_h3_binning.py  flight_identification.py  hexaero_apt_generator.py  hexaero_rwy_generator.py  osn_flight_events_etl.py  osn_statevectors_etl.py  osn_test_access.ipynb  osn_track_id.py  (+6 more)
(+133 files in other folders)
